# sql-mcp-server

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: publish-crate.yml  release.yml
src/: cli.rs  db.rs  lib.rs  main.rs  mcp.rs  tunnel.rs
