[package]
name = "sql-mcp-server"
version = "0.1.0"
edition = "2024"
description = "An MCP server for connecting to and running queries on SQL databases. Supports built-in SSH tunneling"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
russh = "0.61.2"
sqlx = {
  version = "0.9.0",
  features = [
    "any",
    "mysql",
    "postgres",
    "runtime-tokio",
    "sqlite",
    "tls-native-tls"
  ]
}
tokio = {
  version = "1.52.3",
  features = ["io-util", "macros", "net", "rt-multi-thread", "signal"]
}
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
