[package]
name = "sql-mcp-server"
version = "0.1.1"
edition = "2024"
description = "An MCP server for connecting to and running queries on SQL databases. Supports built-in SSH tunneling"
homepage = "https://github.com/affanshahid/sql-mcp-server#readme"
repository = "https://github.com/affanshahid/sql-mcp-server"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
rmcp = { version = "1.7.0", features = ["transport-io"] }
russh = {
  version = "0.61.2",
  default-features = false,
  features = ["flate2", "ring", "rsa"]
}
schemars = "1.2.1"
serde = "1.0.228"
serde_json = "1.0.150"
sqlparser = "0.62.0"
sqlx = {
  version = "0.9.0",
  features = ["mysql", "postgres", "runtime-tokio", "sqlite", "tls-native-tls"]
}
sqlx-json = "0.13.2"
tokio = {
  version = "1.52.3",
  features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
  ]
}
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"

[profile.dist]
inherits = "release"
lto = "thin"
